crates/mcb-server/tests/contract/snapshots/contract__index_contract_tests__index_happy_path.snap
---
source: crates/mcb-server/tests/contract/index_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "index_status",
      "arguments": {}
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Missing execution provenance for 'index_status': session_id, repo_id, operator_id, machine_id, agent_program, model_id, delegated, timestamp"
    },
    "id": 1
  }
}
