crates/mcb-server/tests/contract/snapshots/contract__index_contract_tests__index_invalid_args.snap
---
source: crates/mcb-server/tests/contract/index_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "index_repo",
      "arguments": {
        "max_file_size": "not_a_number"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Missing execution provenance for 'index_repo': session_id, repo_id, operator_id, machine_id, agent_program, model_id, delegated, timestamp"
    },
    "id": 1
  }
}
